@@ -3,6 +3,8 @@ Sam Lantinga - Sat Sep 26 01:13:29 PDT 2009
  * Added API to disable kerning: TTF_GetFontKerning()/TTF_SetFontKerning()
 Sam Lantinga - Sat Sep 26 00:54:30 PDT 2009
  * Fixed height calculation for fonts that extend below the font height
+Gregory Smith - 2008-09-04 18:05:28 PDT 
+ * Added access to font hinting: TTF_GetFontHinting()/TTF_SetFontHinting()
 Matthias Weigand - Mon Jul 23 21:09:20 PDT 2007
  * Added TTF_GlyphIsProvided() to check whether a glyph is in a given font
 
